force-app/main/default/objects/Job_License_Requirement__c/Job_License_Requirement__c.object-meta.xml
<CustomObject>
    <label>License Requirements</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>License Requirements Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>