force-app/main/default/objects/Job_License_Requirement__c/fields/Active_Required__c.field-meta.xml
<CustomField>
    <fullName>Active_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active_Required</label>
    <type>Checkbox</type>
</CustomField>