force-app/main/default/objects/Job_License_Requirement__c/fields/Expiry_Check_Required__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Check_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expiry_Check_Required</label>
    <type>Checkbox</type>
</CustomField>