force-app/main/default/objects/Job_License_Requirement__c/fields/Issuing_Authority__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Authority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuing_Authority</label>
    <length>120</length>
    <type>Text</type>
</CustomField>