force-app/main/default/objects/Job_License_Requirement__c/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <label>Job_Posting</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>License Requirements</relationshipLabel>
    <relationshipName>License_Requirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>