force-app/main/default/objects/Job_License_Requirement__c/fields/License_Name__c.field-meta.xml
<CustomField>
    <fullName>License_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>License_Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>